# tglang

./: README.md
lib/: build.Dockerfile  test.Dockerfile
lib/data/dataset/TGLANG_LANGUAGE_1S_ENTERPRISE/: test0.txt  test1.txt  test17.txt  test4.txt  test8.txt  test9.txt
lib/data/dataset/TGLANG_LANGUAGE_ABAP/: test0.txt  test14.txt  test16.txt  test19.txt  test5.txt  test6.txt  test7.txt  test8.txt
lib/data/dataset/TGLANG_LANGUAGE_ACTIONSCRIPT/: test10.txt  test14.txt  test16.txt  test2.txt  test8.txt
lib/data/dataset/TGLANG_LANGUAGE_APEX/: test12.txt
lib/data/dataset/TGLANG_LANGUAGE_APPLESCRIPT/: test11.txt  test19.txt  test5.txt
lib/data/dataset/TGLANG_LANGUAGE_ASP/: test1.txt  test10.txt  test11.txt  test13.txt  test14.txt  test18.txt  test19.txt  test3.txt  test5.txt
lib/data/dataset/TGLANG_LANGUAGE_AUTOHOTKEY/: test0.txt  test18.txt  test6.txt
lib/data/dataset/TGLANG_LANGUAGE_AWK/: test0.txt  test15.txt  test17.txt  test18.txt  test2.txt  test6.txt
lib/data/dataset/TGLANG_LANGUAGE_BASIC/: test10.txt  test12.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test4.txt  test7.txt
lib/data/dataset/TGLANG_LANGUAGE_BATCH/: test0.txt  test10.txt  test11.txt  test13.txt  test16.txt  test17.txt  test3.txt  test4.txt  test6.txt  test8.txt
lib/data/dataset/TGLANG_LANGUAGE_BISON/: test0.txt  test1.txt  test12.txt  test14.txt  test16.txt  test18.txt  test2.txt  test4.txt  test5.txt  test6.txt  test9.txt
lib/data/dataset/TGLANG_LANGUAGE_COBOL/: test0.txt  test1.txt  test10.txt  test12.txt  test13.txt  test15.txt  test16.txt  test17.txt  test19.txt  test3.txt  test5.txt  test7.txt  test9.txt
lib/data/dataset/TGLANG_LANGUAGE_CPLUSPLUS/: test1.txt  test16.txt  test20.txt
lib/data/dataset/TGLANG_LANGUAGE_CSV/: test1.txt  test12.txt  test13.txt  test15.txt  test19.txt  test2.txt  test6.txt
lib/data/dataset/TGLANG_LANGUAGE_D/: test16.txt
lib/data/dataset/TGLANG_LANGUAGE_DELPHI/: test0.txt  test10.txt
lib/data/dataset/TGLANG_LANGUAGE_ELIXIR/: test4.txt
lib/data/dataset/TGLANG_LANGUAGE_FIFT/: test0.txt  test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
lib/data/dataset/TGLANG_LANGUAGE_FORTH/: test19.txt  test5.txt
lib/data/dataset/TGLANG_LANGUAGE_FORTRAN/: test7.txt
lib/data/dataset/TGLANG_LANGUAGE_FUNC/: test0.txt  test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
lib/data/dataset/TGLANG_LANGUAGE_GAMS/: test0.txt  test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  (+12 more)
lib/data/model/: model_meta.hpp
lib/data/report/: test_results.csv  test_results_analysis.txt
lib/libtglang/: CMakeLists.txt  tglang.cpp  tglang.h  tglang_detector.hpp  tglang_preprocessor.hpp
lib/libtglang-tester/: CMakeLists.txt  tglang-tester.c
lib/scripts/: analyse.py  build.sh  test.sh  tester.sh
ml/: data.ipynb  playground.ipynb  train.py  vocabulary.txt
ml/model/: mbert.py
ml/utils/: helper.py  lang_constructs.py  lang_enum.py  preprocess.py  vocab.py
(+254 files in other folders)
